<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/searchSettingsButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/baseline_manage_search_24" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="50"
                android:autofillHints="false"
                android:ems="10"
                android:gravity="bottom|center"
                android:hint="@string/search"
                android:inputType="text"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/fedDistrict" />

                <Spinner
                    android:id="@+id/fedDistrictSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/fedDistrict" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"

                    android:gravity="start"
                    android:text="@string/subjectFed" />

                <Spinner
                    android:id="@+id/subjectFedSpinner"

                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/subject" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"

                    android:gravity="start"
                    android:text="@string/locality" />

                <Spinner
                    android:id="@+id/localitySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/locality" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>